# amazon_reviews

./: .dockerignore  .gitignore  Dockerfile  PROJECT_DOCUMENTATION.md  README.md  app.py  deploy.py  export_best_model.py  main.py  pipeline.py  pyproject.toml
notebooks/: amazon_reviews_notebook.ipynb
serving_artifacts/: metadata.json
serving_artifacts/best_model/: MLmodel  model.pkl
serving_artifacts/model/: conda.yaml
src/config/: __init__.py  constants.py  mlflow_setup.py
src/data/: loaders.py  utils.py  validators.py
src/features/: engineering.py
src/models/: __init__.py  evaluate.py  model_registry.py  trainer.py
src/serving/: __init__.py  model_loader.py
templates/: index.html
