[project]
name = "amazon-reviews"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "jinja2>=3.1.6",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "mlflow>=2.16,<3",
    "numpy>=2.4.4",
    "optuna>=4.3.0",
    "pandas>=2.2,<3",
    "prefect>=3.6.26",
    "protobuf<5",
    "setuptools<82",
    "rarfile>=4.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "ucimlrepo>=0.0.7",
    "uvicorn>=0.34.2",
    "python-multipart>=0.0.26",
]
